@@ -93,6 +93,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 11810) Localize displayed semicolons
 * (bug 11657) Support for Thai solar calendar
 * (bug 943) RSS feed for Recentchangeslinked
+* Introduced AbortMove hook
 
 === Bug fixes in 1.12 ===
 
